--- a/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/estilos.css
+++ b/Front-End/Módulo 1/2ª Semana/Trabalho Prático da 2ª Semana/estilos.css
@@ -1,34 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap');
 
-.perfil {
-    border-radius: 50%;    
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Open+Sans:wght@400;500&display=swap');
+
+#header {
+    border-bottom: 1px solid #667eea;
+    margin: 0 auto;
+    width: 1280px;
+    background-image: linear-gradient(#4cac87, #314134);
+    border-collapse: separate;
+    padding: 2.5em 0 2.5em 2.5em;
+
 }
 
 .name {
-    color: #667eea;
+    color: rgb(230, 248, 234);
     font-size: 40px;
     font-family: Open Sans;
     font-weight: 600;
     vertical-align: bottom;
     white-space: nowrap;
-}
-
-.description {
-    color: #6f86d6;
-    font-size: 16px;
-    font-family: Courier New;
-    font-weight: 600;
-    vertical-align: top;
     padding-left: 0.5em;
 }
 
-#header {
-    border-bottom: 1px solid #667eea;
+.description {
+    color: rgb(199, 223, 198);
+    font-size: 17px;
+    font-family: Courier New;
+    font-weight: 600;
+    vertical-align: top;
+    padding-left: 1em;
+}
+
+#body1 {
     margin: 0 auto;
-    width: 100%;
-    background-image: linear-gradient(#B1F3CF, #CCC8F1);
+    width: 80%;
     border-collapse: separate;
-    padding: 2.5em 5em;
+    font-family: Caveat;
+    font-size: 25px;
 }
 
 #footer {
@@ -37,4 +45,51 @@
     font-family: Open Sans;
     font-weight: bold;
     width: 1280px;
+    background-image: linear-gradient(#eafff3, #fff);
+}
+
+
+
+
+
+
+a {
+    text-decoration: none;
+}
+
+.amenu {
+    color: #333334;
+    padding: 17px;
+    white-space: nowrap;
+}
+
+.amenu:hover {
+    color: #fff;
+    background-color: #3E5BA0;
+    border-radius: 15px;
+    padding: 9% 28%;
+    white-space: nowrap;
+}
+
+.herosection1 {
+    color: #B6BECC;
+    background-color: #333334;
+    border-radius: 25px;
+    padding: 0 10px;
+    font-size: 30px;
+    padding: 0 0.8em;
+    height: 160;
+}
+
+.button {
+    margin-bottom: 1.5em;
+    border: solid 0;
+    color: #fff;
+    background-color: #3D57A1;
+    border-radius: 10px;
+    padding: 1em;
+    font-family: Open Sans;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 15px;
 }
