--- a/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/estilos.css
+++ b/Front-End/Módulo 1/3ª Semana/Trabalho Prático da 3ª Semana/estilos.css
@@ -117,7 +117,7 @@ h3 {
     clear: both !important;
 }
 
-.button {
+.my3 .button {
     background-color: #333;
     color: white;
     padding: 15px 30px;
@@ -126,6 +126,14 @@ h3 {
     font-size: 1.3vw;
     position: relative;
     float: right;
+}
+
+.button {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    display: inline-block;
+    font-size: 1.1vw;
 }
 
 .hero {
@@ -198,7 +206,6 @@ h1 {
 .card {
     width: calc((100% - 1.6rem)/3);
     background-color: white;
-    width: 20vw;
     display: inline-block;
     border-radius: 15px;
 }
@@ -215,4 +222,34 @@ h1 {
 
 .p1 {
     padding: .5rem !important;
+}
+
+.precos table {
+    border: solid 1px #ddd;
+    text-align: center;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.precos table td {
+    padding: 15px;
+    width: 33vh;
+    border: solid 1px #ddd;
+}
+
+td h3 {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.bg-green {
+    background-color: rgb(137, 155, 137);
+}
+
+.bg-lightgreen {
+    background-color: rgb(188, 205, 188);
+}
+
+.bg-gray {
+    background-color: #ddd;
 }
