--- a/FIC2 - Back-End/Módulo 3 - Persistência de dados com Sequelize/3ª Semana/Trabalho Prático da 3ª Semana/views/formCliente.html
+++ b/FIC2 - Back-End/Módulo 3 - Persistência de dados com Sequelize/3ª Semana/Trabalho Prático da 3ª Semana/views/formCliente.html
@@ -29,7 +29,7 @@ ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     <form action="/addcliente" method="POST">
       <div class="row justify-content-center">
         <div class="col-8">
-          <label for="nome2" class="form-label">Nome:</label>
+          <label for="nome" class="form-label">Nome:</label>
           <input type="text" name="nome" class="form-control" id="nome" />
         </div>
         <div class="col-8">
