--- a/FIC2 - Back-End/Módulo 3 - Persistência de dados com Sequelize/3ª Semana/Trabalho Prático da 3ª Semana/views/formCliente.html
+++ b/FIC2 - Back-End/Módulo 3 - Persistência de dados com Sequelize/3ª Semana/Trabalho Prático da 3ª Semana/views/formCliente.html
@@ -1,67 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-
-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-
-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJO
-Z"
-      crossorigin="anonymous"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-
-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-
-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <title>Cadastro de Clientes</title>
-  </head>
-  <body>
-    <center>
-      <h4><p>Cadastro de Clientes</p></h4>
-    </center>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <title>SupplierMaster - Gestão de Cadastros</title>
+    <style>
+      h1,
+      h2,
+      h5 {
+        text-align: center;
+      }
+      body {
+        background-color: #e5e5e5;
+      }
 
-    <form action="/addcliente" method="POST">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <label for="nome" class="form-label">Nome:</label>
-          <input type="text" name="nome" class="form-control" id="nome" />
-        </div>
-        <div class="col-8">
-          <label for="nascimento" class="form-label">Data de nascimento</label>
-          <input
-            type="text"
-            name="nascimento"
-            class="form-control"
-            id="nascimento"
-            aria-describedby="nascimentoHelp"
-          />
-          <small id="nascimentoHelp" class="form-text text-muted"
-            >Por favor, preencha a data no formato AAAA-MM-DD</small
-          >
-        </div>
-        <div class="col-8">
-          <label for="cidade" class="form-label">Cidade:</label>
-          <input type="text" name="cidade" class="form-control" id="cidade" />
-        </div>
-        <div class="col-8">
-          <label for="telefone" class="form-label">Telefone:</label>
-          <input
-            type="text"
-            name="telefone"
-            class="form-control"
-            id="telefone"
-          />
-        </div>
-        <div class="col-8">
-          <button type="submit" class="btn btn-primary">Cadastrar</button>
+      .main {
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        padding: 20px;
+        background-color: #ffffff;
+      }
+
+      .button {
+        background-color: #c9c9ca;
+        color: #313131;
+        border-radius: 20px;
+        box-shadow: 0 2px 2px rgba(130, 130, 130, 0.8);
+        padding: 12px 24px;
+        font-size: 16px;
+        border: none;
+        transition: background-color 0.3s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 1em auto;
+        width: 75%;
+      }
+
+      a:hover {
+        text-decoration: none;
+      }
+      .button:hover {
+        background-color: #a8a9ac;
+        cursor: pointer;
+      }
+
+      .button:active {
+        background-color: #94969a;
+      }
+
+      .button .bi {
+        margin-bottom: 5px;
+      }
+
+      .bi {
+        font-size: xx-large;
+      }
+
+      .close {
+        margin: 1em 0 0 1.5em;
+        font-size: 0.8em;
+      }
+
+      label {
+        margin-top: 1em;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container mt-5">
+      <div class="main">
+        <h1>SupplierMaster</h1>
+        <h5>Gestão de Cadastros</h5>
+        <hr />
+        <h2>Cadastrar Cliente</h2>
+        <div class="row mt-4">
+          <form action="/addcliente" method="POST">
+            <div class="row justify-content-center">
+              <div class="col-8">
+                <label for="nome" class="form-label">Nome:</label>
+                <input
+                  type="text"
+                  name="nome"
+                  class="form-control"
+                  id="nome"
+                  required
+                />
+              </div>
+              <div class="col-8">
+                <label for="nascimento" class="form-label"
+                  >Data de Nascimento:</label
+                >
+                <input
+                  type="text"
+                  name="nascimento"
+                  class="form-control"
+                  id="nascimento"
+                  aria-describedby="nascimentoHelp"
+                  required
+                />
+                <small id="nascimentoHelp" class="form-text text-muted"
+                  >Por favor, preencha a data no formato AAAA-MM-DD</small
+                >
+              </div>
+              <div class="col-8">
+                <label for="cidade" class="form-label">Cidade:</label>
+                <input
+                  type="text"
+                  name="cidade"
+                  class="form-control"
+                  id="cidade"
+                  required
+                />
+              </div>
+              <div class="col-8">
+                <label for="telefone" class="form-label">Telefone:</label>
+                <input
+                  type="text"
+                  name="telefone"
+                  class="form-control"
+                  id="telefone"
+                  required
+                />
+              </div>
+              <div class="col-8">
+                <button type="submit" class="button">Cadastrar</button>
+              </div>
+            </div>
+          </form>
+          <a href="/">
+            <button class="close"><i class="bi bi-backspace-fill"></i></button>
+          </a>
         </div>
       </div>
-    </form>
+    </div>
   </body>
 </html>
