Trabalho Prático da 3ª Semana

--- a/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Aula 18 - Criação das rotas do FrontEnd/frontend/views/tarefas/cadastrar.handlebars
+++ b/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Aula 18 - Criação das rotas do FrontEnd/frontend/views/tarefas/cadastrar.handlebars
@@ -1,4 +1,4 @@
-<h1 class="text-center my-3">Cadastro de Tarefas</h1>
+<h1 class="text-center my-3">Cadastro de tarefas</h1>
 <form action="/tarefas/Create" method="post">
 <div class="row w-50 d-block m-auto g-3">
 <div class="col-12">
@@ -8,7 +8,7 @@ class="form-control"
 type="titulo"
 name="titulo"
 id="titulo"
-placeholder="Digite o título da tarefa"
+placeholder="Digite o título da Tarefa"
 />
 </div>
 <div class="col-12">
@@ -18,11 +18,11 @@ class="form-control"
 type="descricao"
 name="descricao"
 id="descricao"
-placeholder="Digite a descrição da tarefa"
+placeholder="Digite a descrição da tarefa."
 />
 </div>
 <div>
-<input class="btn btn-primary my-3" type="submit" value="Cadastrar Tarefa"
+<input class="btn btn-primary my-3" type="submit" value="Cadastrar tarefa"
 />
 </div>
 </div>
