--- a/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Aula 18 - Criação das rotas do FrontEnd/frontend/views/tarefas/listar.handlebars
+++ b/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Aula 18 - Criação das rotas do FrontEnd/frontend/views/tarefas/listar.handlebars
@@ -1,9 +1,9 @@
-<h1 class="text-center my-3">Lista de Tarefas</h1>
+<h1 class="text-center my-3">Lista de tarefas</h1>
   <table class="table">
   <div class="row">
     <div class="col-12">
       <thead>
-        <th>Código da Tarefa</th>
+        <th>Código da tarefa</th>
         <th>Título</th>
         <th>Descrição</th>
       </thead>
@@ -12,6 +12,7 @@
         <tr>
           <th>{{this.id_tarefa}}</th>
           <th>{{this.titulo}}</th>
+          
           <th>{{this.descricao}}</th>
           <th>
             <a href="/tarefas/Atualizar/{{this.id_tarefa}}/{{this.titulo}}/{{this.descricao}}">
