--- a/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Aula 18 - Criação das rotas do FrontEnd/frontend/views/tarefas/update.handlebars
+++ b/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Aula 18 - Criação das rotas do FrontEnd/frontend/views/tarefas/update.handlebars
@@ -1,5 +1,6 @@
-<h1 class="text-center my-3">Cadastro de Tarefas</h1>
-<form action="/tarefas/Create" method="post">
+<h1 class="text-center my-3">Atualizar Tarefa: {{tarefas.titulo}}</h1>
+<form action="/tarefas/Update" method="post"">
+<input type="hidden" name="id_tarefa" value="{{tarefas.id_tarefa}}" />
 <div class="row w-50 d-block m-auto g-3">
 <div class="col-12">
 <label class="form-label" for="titulo">Titulo:</label>
@@ -8,7 +9,7 @@ class="form-control"
 type="titulo"
 name="titulo"
 id="titulo"
-placeholder="Digite o título da tarefa"
+value="{{tarefas.titulo}}"
 />
 </div>
 <div class="col-12">
@@ -18,11 +19,11 @@ class="form-control"
 type="descricao"
 name="descricao"
 id="descricao"
-placeholder="Digite a descrição da tarefa"
+value="{{tarefas.descricao}}"
 />
 </div>
 <div>
-<input class="btn btn-primary my-3" type="submit" value="Cadastrar Tarefa"
+<input class="btn btn-primary my-3" type="submit" value="Atualizar tarefa"
 />
 </div>
 </div>
