--- a/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Trabalho Prático da 3ª Semana/frontend/views/layouts/main.handlebars
+++ b/FIC2 - Back-End/Módulo 4 - Node.js intermediário, CRUD com Sequelize, cookies e sessões/3ª Semana/Trabalho Prático da 3ª Semana/frontend/views/layouts/main.handlebars
@@ -8,15 +8,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     {{!-- ARQUIVOS LOCAL --}}
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Sistema de Lista de Tarefas</title>
+    <title>Sistema de Cadastros</title>
   </head>
 
   <body id="body-mobile">
     <nav class="navbar text-bg-dark">
       <div class="container">
-        <span class="navbar-brand text-white">Sistema de Tarefas</span>
+        <span class="navbar-brand text-white">Sistema de Cadastros</span>
         <ul class="navbar nav">
+        <li class="nav-item"></li>
           
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/usuarios/listar">Listar Usuários</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/usuarios/cadastrar">Cadastrar Usuário</a>
+          </li>
+          <li><span>|</span></li>
           <li class="nav-item"></li>
           
           <li class="nav-item">
@@ -25,7 +34,7 @@
           
           <li class="nav-item">
             <a class="nav-link text-white" href="/tarefas/cadastrar">Cadastrar Tarefa</a>
-          </li>
+          </li>          
         </ul>
       </div>
     </nav>
